test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_string_const.draco
proc main() void : a := '"'; corp;


