test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_char_const_too_long.draco
proc main() void : a := 'abc'; corp;



